Template formating initially complete.

--- a/template/home/base.html
+++ b/template/home/base.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+{% block blog_css %}
 
+{% endblock %}
     <!-- Title  -->
 
     <title>{% block title %}
@@ -21,6 +23,7 @@
 
     <!-- Style CSS -->
     <link rel="stylesheet" href="{% static 'front/style.css' %}">
+  
 
 </head>
 
@@ -202,174 +205,9 @@
  
     <!-- ***** Blog Area End ***** -->
 
-    <!-- ***** Emergency Area Start ***** -->
-    <!-- <div class="medilife-emergency-area section-padding-100-50">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6">
-                    <div class="emergency-content">
-                        <i class="icon-smartphone"></i>
-                        <h2>For Emergency calls</h2>
-                        <h3>+12-823-611-8721</h3>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-6">
-                    <div class="row">
-                        <!-- Single Emergency Helpline -->
-                        <!-- <div class="col-12 col-sm-6">
-                            <div class="single-emergency-helpline mb-50">
-                                <h5>London</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami
-                                </p>
-                            </div>
-                        </div> -->
-                        <!-- Single Emergency Helpline -->
-                        <!-- <div class="col-12 col-sm-6">
-                            <div class="single-emergency-helpline mb-50">
-                                <h5>New Castle</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami
-                                </p>
-                            </div>
-                        </div> -->
-                        <!-- Single Emergency Helpline -->
-                        <!-- <div class="col-12 col-sm-6">
-                            <div class="single-emergency-helpline mb-50">
-                                <h5>Manchester</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami
-                                </p>
-                            </div>
-                        </div> -->
-                        <!-- Single Emergency Helpline -->
-                        <!-- <div class="col-12 col-sm-6">
-                            <div class="single-emergency-helpline mb-50">
-                                <h5>Bristol</h5>
-                                <p>0080 673 729 766 <br> contact@business.com <br> Lamas Str, no 14-18 <br> 41770 Miami
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>  -->
-    <!-- ***** Emergency Area End ***** -->
     <!-- ***** Footer Area Start ***** -->
-    <footer class="footer-area section-padding-100">
-        <!-- Main Footer Area -->
-        <div class="main-footer-area">
-            <div class="container-fluid">
-                <div class="row">
 
-                    <div class="col-12 col-sm-6 col-xl-3">
-                        <div class="footer-widget-area">
-                            <div class="footer-logo">
-                                <img src="img/core-img/logo.png" alt="">
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                                tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet,
-                                consectetuer.</p>
-                            <div class="footer-social-info">
-                                <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-xl-3">
-                        <div class="footer-widget-area">
-                            <div class="widget-title">
-                                <h6>Latest News</h6>
-                            </div>
-                            <div class="widget-blog-post">
-                                <!-- Single Blog Post -->
-                                <div class="widget-single-blog-post d-flex">
-                                    <div class="widget-post-thumbnail">
-                                        <img src="img/blog-img/ln1.jpg" alt="">
-                                    </div>
-                                    <div class="widget-post-content">
-                                        <a href="#">Better Health Care</a>
-                                        <p>Dec 02, 2017</p>
-                                    </div>
-                                </div>
-                                <!-- Single Blog Post -->
-                                <div class="widget-single-blog-post d-flex">
-                                    <div class="widget-post-thumbnail">
-                                        <img src="img/blog-img/ln2.jpg" alt="">
-                                    </div>
-                                    <div class="widget-post-content">
-                                        <a href="#">A new drug is tested</a>
-                                        <p>Dec 02, 2017</p>
-                                    </div>
-                                </div>
-                                <!-- Single Blog Post -->
-                                <div class="widget-single-blog-post d-flex">
-                                    <div class="widget-post-thumbnail">
-                                        <img src="img/blog-img/ln3.jpg" alt="">
-                                    </div>
-                                    <div class="widget-post-content">
-                                        <a href="#">Health department advice</a>
-                                        <p>Dec 02, 2017</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-xl-3">
-                        <div class="footer-widget-area">
-                            <div class="widget-title">
-                                <h6>Contact Form</h6>
-                            </div>
-                            
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-sm-6 col-xl-3">
-                        <div class="footer-widget-area">
-                            <div class="widget-title">
-                                <h6>News Letter</h6>
-                            </div>
-
-                            <div class="footer-newsletter-area">
-                                <form action="#">
-                                    <input type="email" class="form-control border-0 mb-0" name="newsletterEmail"
-                                        id="newsletterEmail" placeholder="Your Email Here">
-                                    <button type="submit">Subscribe</button>
-                                </form>
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
-                                    euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor
-                                    sit amet, consectetuer.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Bottom Footer Area -->
-        <div class="bottom-footer-area">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-10">
-                        <div class="bottom-footer-content">
-                            <!-- Copywrite Text -->
-                            <div class="copywrite-text">
-                                <p>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                    Copyright &copy;
-                                    <script>document.write(new Date().getFullYear());</script> All rights reserved |
-                                    This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                        href="https://colorlib.com" target="_blank">Colorlib</a>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    {% include 'home/footer/footer.html' %}
     <!-- ***** Footer Area End ***** -->
 
     <!-- jQuery (Necessary for All JavaScript Plugins) -->
