--- a/template/home/blog_view/home_page_view.html
+++ b/template/home/blog_view/home_page_view.html
@@ -1,9 +1,13 @@
 {% extends 'home/base.html' %}
 {% load static %}
 
-    {% block about_us %}
-    
-    {% endblock %}
+{% block blog_css %}
+<link rel="stylesheet" href="{% static 'front/css/timeline.css' %}">
+{% endblock %}
+
+{% block title %}
+Home Page
+{% endblock %}
     
 {% block slideshow %}
 
@@ -21,28 +25,6 @@
     </div>
     {% endfor %}
     {% endif %}
-    <!-- Single Gallery Item -->
-    <!-- <div class="single-gallery-item">
-        <img src="https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg" alt="">
-        <div class="view-more-btn">
-            <a href="img/bg-img/g2.jpg" class="btn gallery-img">See More +</a>
-        </div>
-    </div> -->
-    <!-- Single Gallery Item -->
-    <!-- <div class="single-gallery-item">
-        <img src="https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg" alt="">
-        <div class="view-more-btn">
-            <a href="img/bg-img/g3.jpg" class="btn gallery-img">See More +</a>
-        </div>
-    </div> -->
-
-    <!-- Single Gallery Item -->
-    <!-- <div class="single-gallery-item">
-        <img src="https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg" alt="">
-        <div class="view-more-btn">
-            <a href="img/bg-img/g4.jpg" class="btn gallery-img">See More +</a>
-        </div>
-    </div> -->
 </div>
 
 {% endblock slideshow %}
@@ -100,9 +82,11 @@
                 <div class="col-12">
                     <div class="appointment-form-content">
                         <div class="row no-gutters align-items-center">
-                            <div class="col-12 col-lg-9">
+                            <div class="col-12 col-lg-9" id="blood-post-form">
+                                <h4 class="text-center text-white mt-4 ml-2">জরুরী রক্তের প্রয়োজনে এখানে পোস্ট করুন। </h4>
                                 <div class="medilife-appointment-form">
-                                    <form method="post" class="text-light">
+
+                                    <form method="post" class="text-light" >
                                         {% csrf_token %}
                                         <div class="row align-items-end">
                                             <div class="col-12 col-md-4">
@@ -180,7 +164,25 @@
 
 {% block home_slide_show %}
 <div class="single-hero-slide bg-img bg-overlay-white"
-style="background-image: url({% static 'front/img/bg-img/hero1.jpg' %});">
+style="background-image: url({% static 'front/img/bg-img/home1.jpg' %});">
+<div class="container h-100">
+    <div class="row h-100 align-items-center">
+        <div class="col-12">
+            <div class="hero-slides-content">
+                <h2 data-animation="fadeInUp" data-delay="100ms">Medical Services that <br>You can Trust
+                    100%</h2>
+                <h6 data-animation="fadeInUp" data-delay="400ms">Lorem ipsum dolor sit amet,
+                    consectetuer adipiscing elit sed diam nonummy nibh euismod.</h6>
+                <!-- <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
+                    data-delay="700ms">Discover Medifile <span>+</span></a> -->
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<!-- Single Hero Slide -->
+<div class="single-hero-slide bg-img bg-overlay-white"
+style="background-image: url({% static 'front/img/bg-img/home2.jpg' %});">
 <div class="container h-100">
     <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -198,25 +200,7 @@ style="background-image: url({% static 'front/img/bg-img/hero1.jpg' %});">
 </div>
 <!-- Single Hero Slide -->
 <div class="single-hero-slide bg-img bg-overlay-white"
-style="background-image: url(img/bg-img/breadcumb3.jpg);">
-<div class="container h-100">
-    <div class="row h-100 align-items-center">
-        <div class="col-12">
-            <div class="hero-slides-content">
-                <h2 data-animation="fadeInUp" data-delay="100ms">Medical Services that <br>You can Trust
-                    100%</h2>
-                <h6 data-animation="fadeInUp" data-delay="400ms">Lorem ipsum dolor sit amet,
-                    consectetuer adipiscing elit sed diam nonummy nibh euismod.</h6>
-                <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
-                    data-delay="700ms">Discover Medifile <span>+</span></a>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-<!-- Single Hero Slide -->
-<div class="single-hero-slide bg-img bg-overlay-white"
-style="background-image: url(img/bg-img/breadcumb1.jpg);">
+style="background-image: url({% static 'front/img/bg-img/home3.jpg' %});">
 <div class="container h-100">
     <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -234,106 +218,33 @@ style="background-image: url(img/bg-img/breadcumb1.jpg);">
 </div>
 {% endblock %}
 
-    {% block feature_area %}
-    <div class="medilife-features-area section-padding-100">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-12 col-lg-6">
-                        <div class="features-content">
-                            <h2>A new way to treat pacients in a revolutionary facility</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                                tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet,
-                                consectetuer adipiscing eli.Lorem ipsum dolor sit amet, consec tetuer adipiscing elit, sed
-                                diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem
-                                ipsum dolor sit amet, consectetuer.</p>
-                            <a href="#" class="btn medilife-btn mt-50">View the services <span>+</span></a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-6">
-                        <div class="features-thumbnail">
-                            <img src="img/bg-img/medical1.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    {% endblock feature_area %}
-
-
-    
-        
-
 {% block blog_view %}
-<div class="medilife-blog-area section-padding-100-0">
-    <div class="container">
-        <div class="row">
 
             {% if blogs %}
-            {% for blog in blogs %}
+           
+           
      <!-- Single Blog Area -->
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="single-blog-area mb-100">
-                    <div class="card text-center">
-                        <div class="card-header">
-                            {{blog.name}}
-                            {{blog.created}}
-
-                        </div>
-                        <div class="card-body">
-                            <h5 class="card-title">Location: {{blog.location| upper }}</h5>
-                            <p class="card-text">{{blog.description | upper }}</p>
-                            
-                        </div>
-                        <!-- <div class="card-footer text-muted">
-                            <input type="text" class="form-control" placeholder="place your comment">
-                            <a href="#" class="btn btn-primary">Comment</a>
-                        </div> -->
-                        <div class="form-group mx-sm-3 mb-2">
-                            
-                          </div>
-                          <!-- <button type="submit" class="btn btn-primary mb-2">Confirm identity</button> -->
-                       <button href="" >Comment</button>
-                    </div>
-
-                </div>
-            </div>
-            
-            {% endfor %}
-            {% endif %}
-            {% if contacts in contacts %}
-            <div class="pagination">
-               
-                   
-                {% if contacts.has_previous %}
-                <a class="pagination-action" href="?page=1">
-                <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                </a>
-                <a class="pagination-action" href="?page={{ contacts.previous_page_number }}">
-                    <i class="fa fa-angle-left" aria-hidden="true"></i>
-                </a>
-                {% endif %}
-                {% for num in contacts.paginator.page_range %}
-            
-                {% if contacts.number == num %}
-                <span>{{ num }}</span>
-                {% elif num > contacts.number|add:'-3' and num < contacts.number|add:'3' %}
-                <a href="?page={{ num }}">{{ num }}</a>
-                {% endif %}
-            
-                 {% endfor %} 
-                {% if contacts.has_next %}
-            
-                <a href="?page=">first</a>
-                <a href="?page={{ contacts.next_page_number }}">Previous</a>
-                <a href="?page={{ contacts.paginator.num_pages }}">Last</a>
-                {% endif %} 
-            </div>
-            {% endif %}
+            <h1 class="text-center mt-3 mb-3" >Recent Blood Requests</h1>
+            <section id="timeline">
+                    {% for blog in blogs %}
+                    <article>
+                      <div class="inner">
+                        <span class="date">
+                          <span class="day">{{blog.created.day}}<sup>th</sup></span>
+                          <span class="month">{{blog.created|date:"M"}}</span>
+                          <span class="year">{{blog.created.time}}</span>
+                        </span>
+                        <h2>{{blog.blood_group}} Blood Needed </h2>
+                        <p>Location : {{blog.location}}</p>
+                        <p>Quantity : {{blog.quantity}} </p>
+                        <p>Message: {{blog.description}}.</p>
+                      </div>
+                    </article>
+                    {% endfor %}
+                  </section>
              
-        </div>
-        
-    </div>
-    
-</div>
+                     
+            
+            {% endif %}
+            
 {% endblock blog_view %}
