Home page logo changed just.

--- a/template/home/base.html
+++ b/template/home/base.html
@@ -58,7 +58,7 @@
                             <nav class="navbar h-100 navbar-expand-lg">
                                 <!-- Logo Area  -->
                                 <a class="navbar-brand" href="{% url 'index' %}"><img
-                                        src="{% static  'front/img/core-img/logo.png' %}" alt="Logo"></a>
+                                        src="{% static  'front/img/bg-img/logoxx.png' %}" alt="Logo"></a>
 
                                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                                     data-target="#medilifeMenu" aria-controls="medilifeMenu" aria-expanded="false"
