--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -23,7 +23,7 @@
     <!-- Appointment Button -->
     <li class="nav-item">
       <a href="/#blood-post-form" class="btn medilife-appoint-btn ml-30"
-        >For <span>Blood Bank</span> Click here</a
+        ><span>Emergency Blood </span> Click here</a
       >
     </li>
     <!-- <ul class="navbar-nav ml-auto"> -->
