--- a/template/bank/bank-form.html
+++ b/template/bank/bank-form.html
@@ -1,38 +1,34 @@
-{% extends 'home/base.html' %} {% block blood_blog_form %}
-{% if bank_list %}
+{% extends 'home/base.html' %}
+{% load crispy_forms_tags %}
+{% block title %} Add New Blood Bank {% endblock %}
+
+{% block blood_blog_form %}
 <div style="height: 150px;"> a</div>
 <div class="container-fluid">
+    <div class="col-sm-2 xol-lg-2">
 
-    <div class="card-deck">
-        {% for bank in bank_list %}
-        <div class="col-sm-3 col-lg-3 col-xl-3 p-5 m-5">
-            <div class="card h-100 bg-light mb-3">
-                {%if bank.logo %}
-                <img src="{{ bank.logo.url }}" class="card-img-top"
-                    height="10px">
-                {%endif%}
-                <div class="card-body">
-                    <h5 class="card-title">{{bank.name}}</h5>
-                    <p class="card-text">Some quick example text to build on the
-                        card title and
-                        make up the bulk of the card's content.</p>
-                    <a href="#" class="btn
-                        btn-primary">
-                        Details </a>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">created at:
-                        <!-- {{album.was_published_recently}} -->
-                    </small>
-                </div>
+    </div>
+    <div class="col-lg-10 col-sm-10">
+        <div class="card col-lg-10 col-sm-10 pl-3">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{ user.user_name }}Add new
+                    blood
+                    bank</h5>
+                {% if error_message %}
+                <p class="card-text">{{ error_message }}</p>
+                {% endif %}
+                <p class="card-text">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-success">
+                            Create
+                        </button>
+                    </form>
+                </p>
             </div>
         </div>
-        <!-- <li>
-	</li> -->
-        {% endfor %}
     </div>
-
 </div>
-{% else %}
-<h1>No Bank's available</h1>
-{% endif %} {% endblock %}
+{% endblock %}
