--- a/template/home/base.html
+++ b/template/home/base.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load bootstrap4 %}
 <!DOCTYPE html>
 
 
@@ -8,6 +9,8 @@
     <meta name="description" content="IE=edge">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% bootstrap_css %} {# Embed Bootstrap CSS #}
+    {{ form.media.css }}
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 {% block blog_css %}
 
@@ -219,6 +222,9 @@
     {% include 'home/footer/footer.html' %}
     <!-- ***** Footer Area End ***** -->
 
+    {% bootstrap_javascript jquery='full' %} {# Embed Bootstrap JS+jQuery #}
+    {{ form.media.js }}
+    {{ form.media }}
     <!-- jQuery (Necessary for All JavaScript Plugins) -->
     <script src="{% static 'front/js/jquery/jquery-2.2.4.min.js' %}"></script>
     <!-- Popper js -->
