--- a/template/dashboard/partials/leftbar.html
+++ b/template/dashboard/partials/leftbar.html
@@ -23,7 +23,7 @@
         <li class="treeview"><a class="app-menu__item" href="" data-toggle="treeview"><i class="app-menu__icon fa fa-edit"></i><span class="app-menu__label">Commttee</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
             <li><a class="treeview-item" href="{% url 'committee'%}"><i class="icon fa fa-circle-o"></i> Add Commttee</a></li>
-            <li><a class="treeview-item" href="form-custom.html"><i class="icon fa fa-circle-o"></i> View Commttee</a></li>
+            <li><a class="treeview-item" href="{% url 'view_committee' %}"><i class="icon fa fa-circle-o"></i> View Commttee</a></li>
           </ul>
         <!-- </li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-th-list"></i><span class="app-menu__label">Tables</span><i class="treeview-indicator fa fa-angle-right"></i></a>
