--- a/template/home/profile/profile.html
+++ b/template/home/profile/profile.html
@@ -7,7 +7,42 @@
 {% block blog_view %}
 
   <div style="height: 250px;" ></div>
-  <div class="container">
+
+
+<div class="justify-content-md-center">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(149).jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(148).jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+
+
+  <!-- <div class="container">
     <div class="row justify-content-md-center mb-4 pb-4">
    <div class="card " style="width: 18rem;">
    
@@ -25,13 +60,10 @@
       {% endfor %}
       {% endif %}
     </ul>
-    <!-- <a href="{% url 'profile_update' %}" class="btn btn-primary" type="button">Edit</a> -->
-
-
     <a href="{% url 'profile_update' %}" class="btn btn-primary" type="button">Edit</a>
   </div>
   </div>
-</div>
+</div> -->
 
 {% endblock %}
 
