Huge Cumulative Update

--- a/template/home/blog_view/home_page_view.html
+++ b/template/home/blog_view/home_page_view.html
@@ -191,8 +191,8 @@ style="background-image: url({% static 'front/img/bg-img/home2.jpg' %});">
                     100%</h2>
                 <h6 data-animation="fadeInUp" data-delay="400ms">Lorem ipsum dolor sit amet,
                     consectetuer adipiscing elit sed diam nonummy nibh euismod.</h6>
-                <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
-                    data-delay="700ms">Discover Medifile <span>+</span></a>
+                <!-- <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
+                    data-delay="700ms">Discover Medifile <span>+</span></a> -->
             </div>
         </div>
     </div>
@@ -209,8 +209,8 @@ style="background-image: url({% static 'front/img/bg-img/home3.jpg' %});">
                     100%</h2>
                 <h6 data-animation="fadeInUp" data-delay="400ms">Lorem ipsum dolor sit amet,
                     consectetuer adipiscing elit sed diam nonummy nibh euismod.</h6>
-                <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
-                    data-delay="700ms">Discover Medifile <span>+</span></a>
+                <!-- <a href="#" class="btn medilife-btn mt-50" data-animation="fadeInUp"
+                    data-delay="700ms">Discover Medifile <span>+</span></a> -->
             </div>
         </div>
     </div>
