--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -10,7 +10,7 @@
       <a class="nav-link" href="#">About Us</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Services</a>
+      <a class="nav-link" href="{% url 'committeehome' %}">Committee</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'blood_blog' %}">Blood Posts</a>
