--- a/template/dashboard/base.html
+++ b/template/dashboard/base.html
@@ -54,7 +54,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="widget-small primary coloured-icon"><i class="icon fa fa-users fa-3x"></i>
             <div class="info">
-              <h4>Users</h4>
+              <h4>Total Users</h4>
               
               <p><b>{{total_user}}</b></p>
               
@@ -72,7 +72,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="widget-small warning coloured-icon"><i class="icon fa fa-files-o fa-3x"></i>
             <div class="info">
-              <h4>Uploades</h4>
+              <h4>Total Donations</h4>
               <p><b>10</b></p>
             </div>
           </div>
@@ -80,7 +80,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="widget-small danger coloured-icon"><i class="icon fa fa-star fa-3x"></i>
             <div class="info">
-              <h4>Posts</h4>
+              <h4>Total Posts</h4>
               
               <p><b>{{total_post}}</b></p>
             </div>
