--- a/template/dashboard/partials/leftbar.html
+++ b/template/dashboard/partials/leftbar.html
@@ -4,18 +4,19 @@
         {% if user.is_authenticated %}
         <div>
           <p class="app-sidebar__user-name">{{user.username}}</p>
-          <p class="app-sidebar__user-designation">Web Developer</p>
+          <p class="app-sidebar__user-designation">Software Engineer</p>
         </div>
         {% endif %}
       </div>
       <ul class="app-menu">
-        <li><a class="app-menu__item active" href="index.html"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
+        <li><a class="app-menu__item active" href="{% url 'dashboard' %}"><i class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">Dashboard</span></a></li>
         <li class="treeview"><a class="app-menu__item" href="#" data-toggle="treeview"><i class="app-menu__icon fa fa-laptop"></i><span class="app-menu__label">UI Elements</span><i class="treeview-indicator fa fa-angle-right"></i></a>
           <ul class="treeview-menu">
             <li><a class="treeview-item" href="{% url 'image_upload' %}"><i class="icon fa fa-circle-o"></i>Upload Image</a></li>
             <li><a class="treeview-item" href="{% url 'image_list' %}"><i class="icon fa fa-circle-o"></i> Image list</a></li>
             <li><a class="treeview-item" href="{% url 'manage_post' %}"  rel="noopener"><i class="icon fa fa-circle-o"></i> Manage post</a></li>
-        
+            <li><a class="treeview-item" href="{% url 'gelleryImage' %}"  rel="noopener"><i class="icon fa fa-circle-o"></i> Add Gallery Image</a></li>
+            <li><a class="treeview-item" href="{% url 'galleryimageview' %}"  rel="noopener"><i class="icon fa fa-circle-o"></i> Manage Image</a></li>
             <li><a class="treeview-item" href="{% url 'BloodBankManage' %}"><i class="icon fa fa-circle-o"></i> Add Blood Bank </a></li>
           </ul>
         </li>
