--- a/template/dashboard/users/single_user.html
+++ b/template/dashboard/users/single_user.html
@@ -37,6 +37,7 @@
 {% else %}
 <th scope="col">Status : <button type="button" class="btn btn-primary">Unavailable</button> </th>
 {% endif %}
+<th><a href="{% url 'userupdate' single_user.id  %}" type="button" class="btn btn-primary">Edit</a></th>
 </tr>
     </thead>
    
