--- a/template/home/profile/profile.html
+++ b/template/home/profile/profile.html
@@ -9,40 +9,12 @@
   <div style="height: 250px;" ></div>
 
 
-<div class="justify-content-md-center">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(149).jpg" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(148).jpg" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
 
 
 
 
 
-  <!-- <div class="container">
+  <div class="container">
     <div class="row justify-content-md-center mb-4 pb-4">
    <div class="card " style="width: 18rem;">
    
@@ -50,12 +22,19 @@
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Name : {{user.username}}</li>
       <li class="list-group-item">Blood Group: {{ user.blood_group}}</li>
-      <li class="list-group-item">Address : {{user.present_add}}</li>
+      <li class="list-group-item">Address : {{user.address}}</li>
       <li class="list-group-item">Phone : {{user.phone}}</li>
       <li class="list-group-item">Email : {{user.email}}</li>
       <li class="list-group-item">Last Donation : {{user.last_date_of_donation}}</li>
-      {%  if posts %}
+      
+      <li class="list-group-item">My Total Donation :{{user.donate}} </li>
+      
+      {% if posts %}
+      
+      <li class="list-group-item">My Total Post :{{post_number}} </li>
+      
       {% for post in posts %}
+      
       <li class="list-group-item">My post :{{post.description}} </li>
       {% endfor %}
       {% endif %}
@@ -63,7 +42,7 @@
     <a href="{% url 'profile_update' %}" class="btn btn-primary" type="button">Edit</a>
   </div>
   </div>
-</div> -->
+</div>
 
 {% endblock %}
 
