--- a/template/home/blog_view/blog_page.html
+++ b/template/home/blog_view/blog_page.html
@@ -9,35 +9,43 @@
 
 {% block blog_view %}
 
-  <div style="height: 250px;" ></div>
-  <h2 class="text-center display-4">Blood Blog For Everyone</h2>
+  <div style="height: 150px;" ></div>
+  <h2 class="text-center display-4 mb-4">Blood Blog For Everyone</h2>
   <div class="container-fluid">
     <div class="row d-flex justify-content-center">
       <div class="col-md-9">
         {% if blog %}
         {% for item in blog %}
-        <div class="list-group-item list-group-item-secondary mb-2">
-          <h5>{{ item.blood_group }} needed</h5>
-          <p class="lead">
+        <div class="list-group-item list-group-item-secondary mb-3" style="color: white; background-color: #020F20; border-radius: 10px;">
+          <h3 style="color: white; border-bottom: 1px solid white; display: inline-block;" class="px-3 py-2">{{ item.blood_group }} needed</h3>
+          <p class="lead" style="color: white;">
             {{item.name}} need {{item.quantity}} beg {{item.blood_group}} before {{ item.time}}, {{item.date}}
           </p>
           {% if item.description %}
           <blockquote class="blockquote">
-            <u>Message</u>
-            <p class="mb-0">
+            <u  style="color: white;">Message</u>
+            <p class="mb-0"  style="color: white;">
                 {{item.description}}
             </p>
           </blockquote>
           {%endif%}
 
           {% if comments %}
+          <!-- <u  style="color: white;">Comments</u> -->
+          
           {% for comment in comments %}
-            {% if comment.blog.id == item.id %}
             
-            <blockquote class="blockquote">
-              <p class="mb-0">{{comment.text}}</p>
-              <footer class="blockquote-footer"><cite title="Source Title">{{comment.user.username}}</cite></footer>
+          {% if comment.blog.id == item.id %}
+
+            <div class="comment p-2">
+              <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80" class="mr-3" style="height: 50px; width: 50px; border-radius: 50%; display: inline; float: left;">
+            
+            
+            <blockquote class="blockquote" style="display: inline;">
+              <cite title="Source Title" style="color: #a1a1a1;">{{comment.user.username}}</cite>
+              <p class="mb-0"  style="color: white;"><span style="color: d9d9d9;">-- </span>{{comment.text}}</p>
             </blockquote>
+          </div>
             
             {% endif %}
           {% endfor %}
