--- a/template/home/footer/footer.html
+++ b/template/home/footer/footer.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<footer class="footer-area section-padding-100">
+<footer class="footer-area  px-5 py-5">
     <!-- Main Footer Area -->
     <div class="main-footer-area">
       <div class="container-fluid">
