--- a/template/home/blog_view/home_page_view.html
+++ b/template/home/blog_view/home_page_view.html
@@ -15,12 +15,14 @@ Home Page
     <!-- Single Gallery Item -->
     {% if image_list %}
     {% for obj in image_list %}
-    <div class="single-gallery-item">
+    <div class="single-gallery-item px-3 pb-4">
        
        
-        <img src="{{ obj.image.url }}" alt="">
+        <img src="{{ obj.image.url }}" alt=""  style="-webkit-box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75);
+        -moz-box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75);
+        box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75);">
         <div class="view-more-btn">
-            <a href="img/bg-img/g1.jpg" class="btn gallery-img">See More +</a>
+            <a href="{{ obj.image.url }}" class="btn gallery-img">See More +</a>
         </div>
     </div>
     {% endfor %}
@@ -82,8 +84,8 @@ Home Page
                 <div class="col-12">
                     <div class="appointment-form-content">
                         <div class="row no-gutters align-items-center">
-                            <div class="col-12 col-lg-9" id="blood-post-form">
-                                <h4 class="text-center text-white mt-4 ml-2">জরুরী রক্তের প্রয়োজনে এখানে পোস্ট করুন। </h4>
+                            <div class="col-12 col-lg-9 mx-auto" id="blood-post-form">
+                                <h4 class="text-center text-white pt-4 pb-4 px-3" style="font-size: 2rem; border-bottom: 1px solid blanchedalmond;">জরুরী রক্তের প্রয়োজনে এখানে পোস্ট করুন। </h4>
                                 <div class="medilife-appointment-form">
 
                                     <form method="post" class="text-light" >
