--- a/template/home/gallery/gallery.html
+++ b/template/home/gallery/gallery.html
@@ -2,61 +2,34 @@
 {% block about_us %}
 
 <div style="height: 150px;"></div>
+
+<style>
+	.home-gallery-image {
+		height: 400px; width: 400px;
+		border: 1px solid #ddd;
+		border-radius: 20px;
+		/* object-fit: cover; */
+		transition: all 0.3s;
+	}
+	.home-gallery-image:hover {
+		-webkit-box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75);
+		-moz-box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75);
+		box-shadow: 3px 10px 24px -8px rgba(0,0,0,0.75)
+	}
+</style>
+
 <div class="container-fluid">
 	<div class="row">
+		{% if image %}
+		{% for images in image %}
 		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(145).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(145).jpg" class="img-fluid">
+		<a href="{{images.image.url}}" data-size="1600x1067">
+				<img alt="picture" src="{{images.image.url}}" class="img-fluid home-gallery-image">
 		</a>
 		</figure>
+		{% endfor %}
+		{% endif %}
 
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(150).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(150).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(152).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(152).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(42).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(42).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(151).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(151).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(40).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(40).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(148).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(148).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(147).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(147).jpg" class="img-fluid" />
-		</a>
-		</figure>
-
-		<figure class="col-md-4">
-		<a href="https://mdbootstrap.com/img/Photos/Lightbox/Original/img%20(149).jpg" data-size="1600x1067">
-				<img alt="picture" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(149).jpg" class="img-fluid" />
-		</a>
-		</figure>
 		</div>
 </div>
 
