--- a/template/home/partials/menu_area.html
+++ b/template/home/partials/menu_area.html
@@ -1,14 +1,18 @@
 <div class="collapse navbar-collapse" id="medilifeMenu">
   <!-- Menu Area -->
-  <ul class="navbar-nav ml-auto">
+  <ul class="navbar-nav mr-auto">
     <li class="nav-item ">
       <a class="nav-link" href="{% url 'index' %}"
         >Home <span class="sr-only">(current)</span></a
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">About Us</a>
+      <a class="nav-link" href="#">Activity</a>
     </li>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">About Us</a>
+  </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url 'committeehome' %}">Committee</a>
     </li>
@@ -26,6 +30,14 @@
         ><span>Emergency Blood </span> Click here</a
       >
     </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Blood Bank</a>
+      </li>
+      <li class="nav-item">
+        <!-- {% if user.is_staff %}
+          <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+          {% endif %} -->
+        </li>
     <!-- <ul class="navbar-nav ml-auto"> -->
     <li class="nav-item">
       {% if user.is_authenticated %}
