--- a/template/home/profile/profile_update_form.html
+++ b/template/home/profile/profile_update_form.html
@@ -6,14 +6,16 @@
 {% endblock %}
 {% block blog_view %}
 
-  <div style="height: 250px;" ></div>
+  <div style="height: 150px;" ></div>
+  <h2 style="text-align: center;" class="py-4">Update Profile</h2>
   <div class="container " >
     <div class="row align-items-end" >
-     <div class="card col-md-8" style="background-color: cyan;">
+     <div class="col-md-8 mx-auto mb-5" >
         <form method="POST" class="list-group-item" enctype="multipart/form-data">
           {%csrf_token%}
           {{form}}
           <button type="submit" class="btn btn-success">Update</button>
+          
         </form>
       </div>
   </div>
