Profile default pic update

--- a/template/home/profile/profile.html
+++ b/template/home/profile/profile.html
@@ -20,7 +20,7 @@
 
     <div class="col-md-4 mb-5" style=" border-radius: 20px; background-color:#020F20; color: white;">
       <div class="display-profile" style="margin-left: 20px;">
-        <img src="https://images.pexels.com/photos/67636/rose-blue-flower-rose-blooms-67636.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top mx-auto mt-4" alt="Maruf" style="border-radius: 50%; height: 300px; width: 300px; object-fit: cover;">
+        <img src="{{ user.image.url }}" class="card-img-top mx-auto mt-4" alt="Maruf" style="border-radius: 50%; height: 300px; width: 300px; object-fit: cover;">
       </div>
       <h1 class="mt-3" style="text-align: center; color: white;">{{user.username}}</h1>
       <p style="text-align: center; color: white;"> Group: {{ user.blood_group}}<br/></p>
